# TOUCAN

./: .gitignore  pyproject.toml
.dvc/: config
data/: .gitignore  ToolUse_smithery_10239_1tool_1762851360.dvc  ToolUse_smithery_2334_3tool_1767647820.dvc  ToolUse_smithery_2508_3tool_1766028185.dvc  ToolUse_smithery_3600_3tool_1765923804.dvc  ToolUse_smithery_390_3tool_1767773163.dvc  ToolUse_smithery_49350_2tool_1762908421.dvc  ToolUse_smithery_5190_2tool_1765581047.dvc  ToolUse_smithery_5550_2tool_1762996933.dvc  ToolUse_smithery_660_3tool_1765844574.dvc  generated.json.dvc  split2a.dvc  split2b.dvc
datagen/: completion_endpoint.py  convert_preview_to_g1.py  convert_yaml_to_mcp_json.py  dvc.yaml  genos.py  model_configs.json  run_pipeline.sh  step1.3_process_completion.py
