[tool.setuptools]
packages = []

[project]
name = "toucan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "faiss-cpu>=1.11.0",
    "huggingface-hub>=0.33.0",
    "lxml[html-clean]>=5.4.0",
    "mcp[cli]>=1.9.4",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "numpy==2.2",
    "openai>=1.0.0",
    "openai-agents>=0.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.4",
    "searxng-wrapper>=0.1.1",
    "sentence-transformers>=4.1.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
    "transformers>=4.53.0",
    "mistral-common>=1.7.0",
    "wrapt-timeout-decorator>=1.5.1",
    "blobfile>=3.0.0",
]
# GPU-only dependencies (not installable on macOS):
# "flash-attn>=2.8.0.post2"
# "vllm>=0.9.1"
